--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 # Dependencies
-/node_modules 
+/node_modules
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# macOS
+.DS_Store 
