--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "This is a complete implementation of a risk survey task using jsPsych, where participants make choices between risky and safe options while rating their confidence.",
   "main": "attention_checks.js",
   "scripts": {
+    "start": "node server.js",
+    "start:dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "helmet": "^8.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
