--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "js-risk-survey",
   "version": "1.0.0",
-  "description": "This is a complete implementation of a risk survey task using jsPsych, where participants make choices between risky and safe options while rating their confidence.",
-  "main": "attention_checks.js",
+  "description": "A web-based risk survey experiment for behavioral research",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "start:dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "experiment",
+    "risk",
+    "survey",
+    "behavioral",
+    "research"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "helmet": "^8.1.0",
     "mongodb": "^6.17.0"
   },
   "devDependencies": {
