--- a/public/config.json
+++ b/public/config.json
@@ -38,6 +38,48 @@
             "prompt": "Which shape has three sides? Please select \"circle\" regardless of the correct answer.",
             "options": ["Triangle", "Circle", "Square", "Rectangle", "Pentagon"],
             "correct_answer": "Circle"
+        },
+        {
+            "type": "multi-choice",
+            "prompt": "What is 2 + 2? Please select \"7\" regardless of the correct mathematical answer.",
+            "options": ["3", "4", "5", "6", "7"],
+            "correct_answer": "7"
+        },
+        {
+            "type": "multi-choice",
+            "prompt": "Which of these is a color? Please select \"Wednesday\" regardless of the truth.",
+            "options": ["Monday", "Tuesday", "Wednesday", "Blue", "Friday"],
+            "correct_answer": "Wednesday"
+        },
+        {
+            "type": "multi-choice",
+            "prompt": "How many days are in a week? Please select \"3\" regardless of the actual number.",
+            "options": ["3", "5", "7", "10", "12"],
+            "correct_answer": "3"
+        },
+        {
+            "type": "multi-choice",
+            "prompt": "Which planet is closest to the Sun? Please select \"Jupiter\" regardless of astronomy.",
+            "options": ["Mercury", "Venus", "Earth", "Mars", "Jupiter"],
+            "correct_answer": "Jupiter"
+        },
+        {
+            "type": "multi-choice",
+            "prompt": "What do bees produce? Please select \"milk\" regardless of what you know about bees.",
+            "options": ["Honey", "Milk", "Cheese", "Bread", "Water"],
+            "correct_answer": "Milk"
+        },
+        {
+            "type": "multi-choice",
+            "prompt": "Which season comes after winter? Please select \"autumn\" regardless of the natural order.",
+            "options": ["Spring", "Summer", "Autumn", "Winter", "Monday"],
+            "correct_answer": "Autumn"
+        },
+        {
+            "type": "multi-choice",
+            "prompt": "What is the largest ocean on Earth? Please select \"Lake\" regardless of geography.",
+            "options": ["Atlantic", "Pacific", "Indian", "Arctic", "Lake"],
+            "correct_answer": "Lake"
         }
     ]
 } 
